--- a/package.json
+++ b/package.json
@@ -184,9 +184,12 @@
 		"axios": "^0.21.0",
 		"bourbon": "^7.0.0",
 		"bourbon-neat": "^4.0.0",
+		"chart.js": "^2.9.4",
+		"chartkick": "^3.2.1",
 		"hash-it": "^4.0.5",
 		"vee-validate": "^3.4.5",
 		"vue": "^2.6.12",
+		"vue-chartkick": "^0.6.1",
 		"vue-router": "^3.0",
 		"vuex": "^3.6.0"
 	}
